<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jonander.calculatusueldo.ResultsActivity"
    tools:showIn="@layout/activity_results">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/gradientbackground"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/gradientbackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/thankyou"
                    android:textColor="?attr/colorButtonNormal"
                    android:textSize="28sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:background="@drawable/gradientbackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/description_thankyou"
                    android:textColor="?attr/colorButtonNormal"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"
            android:stretchColumns="2"
            android:padding="10dp"
            android:layout_below="@+id/linearLayout">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="#e9ecef">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/sueldo_anual"
                    android:textSize="18dp"
                    android:textColor="#212529"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sueldo_anual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginLeft="5dp"
                    android:text="Hola"
                    android:textColor="#212529"
                    android:textAlignment="center"
                    android:textSize="24dp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow android:layout_margin="10dp">

                <TextView
                    android:text="@string/irpf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1" />

                <TextView
                    android:id="@+id/irpf"
                    android:text="Jolaaa"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:background="#e9ecef">

                <TextView
                    android:text="@string/impuestos_sociales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1" />

                <TextView
                    android:id="@+id/impuestos_sociales"
                    android:text="Jolaaa"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow android:layout_margin="10dp">

                <TextView
                    android:text="@string/ingresos_mensuales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1" />

                <TextView
                    android:id="@+id/ingresos_mensuales"
                    android:text="Jolaaa"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow android:background="#e9ecef">

                <TextView
                    android:text="@string/paga_extra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1" />

                <TextView
                    android:id="@+id/paga_extra"
                    android:text="Jolaaa"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

        </TableLayout>

    </RelativeLayout>
</LinearLayout>
