<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="jonander.calculatusueldo.AnswersFragment"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/money"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_money"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="200dp"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:text="@string/n_payments" />

            <Spinner
                android:id="@+id/n_payments"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:autofillHints="@string/n_payments"
                android:entries="@array/payments"
                app:layout_constraintTop_toBottomOf="@+id/money" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/irpf"
                android:layout_width="361dp"
                android:layout_height="46dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/s_irpf"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:checked="false"
                android:text="Acepto que recopiles mis datos anonimos para estadisticas de educacion"
                android:textColorLink="@android:color/holo_green_dark" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:clickable="true"
                android:src="@android:drawable/ic_dialog_info"
                android:tooltipText="Los datos recopilados unicamente se guardan para obtener estadisticas con fines educativos"
                app:backgroundTint="@android:color/holo_blue_dark"
                app:layout_constraintTop_toBottomOf="@+id/irpf" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/s_calculate"
                android:textSize="12dp"
                android:visibility="visible" />
        </LinearLayout>
</LinearLayout>
